--- a/_posts/0000-01-02-Scysta.md
+++ b/_posts/0000-01-02-Scysta.md
@@ -2,5 +2,5 @@
 layout:slide
 title: "Welcome to our second slide!"
 ---
-Hello, world
+Oh well, let's do some changes 
 Use the left arrow to go back!
